--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-fastapi
-uvicorn[standard]
+fastapi==0.115.0
+uvicorn[standard]==0.31.0
+sqlalchemy==2.0.35
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.1.3
+python-multipart==0.0.9
+Pillow==10.4.0
+google-cloud-storage==2.18.2
+tensorflow==2.17.0
+numpy==1.26.4
+pg8000
 sqlalchemy
-pydantic-settings
-python-jose[cryptography]
-passlib[bcrypt]
-python-multipart
-psycopg2-binary
