--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,23 @@
+# --- Framework & Server ---
 fastapi==0.115.0
 uvicorn[standard]==0.31.0
+python-multipart==0.0.9
+pydantic-settings
+
+# --- Database (MySQL) ---
 sqlalchemy==2.0.35
+pymysql
+cryptography
+
+# --- Keamanan & Auth ---
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-bcrypt==4.1.3
-python-multipart==0.0.9
-Pillow==10.4.0
+
+# --- File & Gambar ---
 google-cloud-storage==2.18.2
-tensorflow==2.17.0
-numpy==1.26.4
-pg8000
-sqlalchemy
-pymysql
-pydantic-settings
-cryptography
-google-cloud-storage
+Pillow==10.4.0
+
+# --- Machine Learning (Versi Ringan) ---
+# PENTING: Pakai CPU saja untuk Cloud Run agar hemat & cepat
 tensorflow-cpu
-numpy
-pillow
+numpy==1.26.4
