--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,4 @@ Pillow==10.4.0
 # PENTING: Pakai CPU saja untuk Cloud Run agar hemat & cepat
 tensorflow-cpu
 numpy==1.26.4
+pip install google-cloud-aiplatform
